--- a/platform/viewer/package.json
+++ b/platform/viewer/package.json
@@ -59,9 +59,12 @@
     "@dcmcloud/extension-dicom-segmentation": "^0.6.10",
     "@dcmcloud/extension-lesion-tracker": "^0.2.1",
     "@dcmcloud/extension-vtk": "^1.11.14",
-    "@dcmcloud/i18n": "^0.53.0",
+    "@dcmcloud/i18n": "^0.2.3",
     "@dcmcloud/ui": "^1.9.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@tanem/react-nprogress": "^1.1.25",
+    "antd": "^4.21.4",
     "classnames": "^2.2.6",
     "core-js": "^3.2.1",
     "cornerstone-core": "^2.2.8",
@@ -74,12 +77,17 @@
     "hammerjs": "^2.0.8",
     "i18next": "^17.0.3",
     "i18next-browser-languagedetector": "^3.0.1",
+    "js-base64": "^3.7.2",
     "lodash.isequal": "4.5.0",
+    "material-table": "^2.0.3",
     "moment": "^2.24.0",
     "oidc-client": "1.7.x",
     "prop-types": "^15.7.2",
     "react-dropzone": "^10.1.7",
+    "react-facebook-login": "4.1.1",
+    "react-google-login": "5.2.2",
     "react-i18next": "^10.11.0",
+    "react-overlay-loader": "^0.0.3",
     "react-redux": "^7.1.0",
     "react-resize-detector": "^4.2.0",
     "react-router": "^5.0.1",
@@ -90,6 +98,8 @@
     "redux-oidc": "3.1.x",
     "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
+    "sweetalert2": "^11.4.14",
+    "validator": "^13.7.0",
     "vtk.js": "^11.14.0"
   },
   "devDependencies": {
