--- a/platform/viewer/package.json
+++ b/platform/viewer/package.json
@@ -59,6 +59,12 @@
     "@ohif/extension-vtk": "^1.12.27",
     "@ohif/i18n": "^0.53.0",
     "@ohif/ui": "^1.10.9",
+    "@material-ui/core":"^4.12.4",
+    "@material-ui/icons":"^4.11.3",
+    "react-facebook-login": "4.1.1",
+    "react-google-login": "5.2.2",
+    "sweetalert2": "^11.4.14",
+    "validator": "^13.7.0",
     "@tanem/react-nprogress": "^1.1.25",
     "classnames": "^2.2.6",
     "core-js": "^3.2.1",
@@ -78,6 +84,7 @@
     "prop-types": "^15.7.2",
     "react-dropzone": "^10.1.7",
     "react-i18next": "^10.11.0",
+    "react-overlay-loader": "0.0.3",
     "react-redux": "^7.1.0",
     "react-resize-detector": "^4.2.0",
     "react-router": "^5.0.1",
